# homework_e-commerce

./: .coverage  .gitignore  16_1_main.py  16_2_main.py  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: base_category.py  base_product.py  category.py  category_iterator.py  exceptions.py  lawn_grass.py  open_json.py  order.py  print_mixin.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_category_iterator.py  test_lawn_grass.py  test_open_json.py  test_order.py  test_print_mixin.py  test_product.py  test_smartphone.py
